<resources>
    <string name="app_name">One Journey</string>
    <string name="get_started_tag_line">Connecting People Through Journeys</string>
    <string name="get_started_btn">Get Started</string>

    <string name="button_sign_up">Sign Up</string>
    <string name="button_login">Log In</string>
    <string name="forget_password">Forget Password</string>
    <string name="input_username">Email Address</string>
    <string name="input_password">Password</string>
    <string name="set_username">Please Enter Your Email</string>
    <string name="set_password">Please Set Your Password</string>
    <string name="select_gender">Please Select</string>
    <string name="input_nickname">Name Shown to Others</string>
    <string name="set_birthday">DD/MM/YYYY</string>

    <string name="share_journey">Share Journey</string>
    <string name="share_vehicle">Share Vehicle</string>
    <string name="share_room">Share Room</string>

    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_other">Other</string>

    <string name="travel_stories">Travel Stories</string>
    <string name="travel_photos">Travel Photos</string>
    <string name="favorite_travels">Favorite Travels</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
