<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".Activities.RegisterPage">

  <RelativeLayout
    android:id="@+id/select_avatar"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@color/tiffany_lighter"
    android:padding="30dp"
    app:layout_constraintTop_toTopOf="parent">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
      android:id="@+id/avatar_sign_up"
      android:layout_width="160dp"
      android:layout_height="160dp"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10dp"
      android:src="@drawable/avatar_circular"
      app:civ_border_color="#FF000000"
      app:civ_border_width="2dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  </RelativeLayout>


  <TextView
    android:id="@+id/textUsername"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="60dp"
    android:layout_marginLeft="60dp"
    android:layout_marginTop="40dp"
    android:enabled="false"
    android:text="Email Address:"
    android:textColor="@color/colorPrimary"
    android:textSize="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/select_avatar" />

  <EditText
    android:id="@+id/textEmailInput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:hint="@string/set_username"
    android:textColor="@color/colorAccent"
    app:layout_constraintStart_toStartOf="@+id/textUsername"
    app:layout_constraintTop_toTopOf="@+id/textUsername" />

  <TextView
    android:id="@+id/textNickname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="60dp"
    android:layout_marginLeft="60dp"
    android:layout_marginTop="5dp"
    android:enabled="false"
    android:text="Nickname:"
    android:textColor="@color/colorPrimary"
    android:textSize="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textEmailInput" />

  <EditText
    android:id="@+id/textNicknameInput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:hint="@string/input_nickname"
    android:inputType="textPersonName"
    android:textColor="@color/colorAccent"
    app:layout_constraintStart_toStartOf="@+id/textNickname"
    app:layout_constraintTop_toTopOf="@+id/textNickname" />

  <TextView
    android:id="@+id/textPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="60dp"
    android:layout_marginLeft="60dp"
    android:enabled="false"
    android:text="Password:"
    android:textColor="@color/colorPrimary"
    android:textSize="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textNicknameInput" />

  <EditText
    android:id="@+id/textPasswordInput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:hint="@string/set_password"
    android:inputType="textPassword"
    android:textColor="@color/colorAccent"
    app:layout_constraintStart_toStartOf="@+id/textPassword"
    app:layout_constraintTop_toTopOf="@+id/textPassword" />

  <TextView
    android:id="@+id/textBirthday"
    android:layout_width="wrap_content"
    android:layout_height="30dp"
    android:layout_marginStart="60dp"
    android:layout_marginLeft="60dp"
    android:enabled="false"
    android:text="Birthday:"
    android:textColor="@color/colorPrimary"
    android:textSize="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textPasswordInput"
    tools:layout_editor_absoluteX="64dp"
    tools:layout_editor_absoluteY="583dp" />

  <EditText
    android:id="@+id/textBirthdayInput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:hint="@string/set_birthday"
    android:textColor="@color/colorAccent"
    app:layout_constraintStart_toStartOf="@+id/textBirthday"
    app:layout_constraintTop_toTopOf="@+id/textBirthday" />

  <TextView
    android:id="@+id/textGender"
    android:layout_width="wrap_content"
    android:layout_height="30dp"
    android:layout_marginStart="60dp"
    android:layout_marginLeft="60dp"
    android:enabled="false"
    android:text="Gender:"
    android:textColor="@color/colorPrimary"
    android:textSize="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textBirthdayInput" />

  <RadioGroup
    android:id="@+id/objRadioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textGender"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="30dp"
    android:orientation="horizontal"
    app:layout_constraintStart_toStartOf="@+id/textGender"
    app:layout_constraintTop_toTopOf="@+id/textGender">

    <RadioButton
      android:id="@+id/maleRadio"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checked="true"
      android:text="@string/radio_male" />

    <RadioButton
      android:id="@+id/femaleRadio"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checked="false"
      android:text="@string/radio_female" />

    <RadioButton
        android:id="@+id/otherRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/radio_other" />
  </RadioGroup>

  <Button
    android:id="@+id/button_finish_signup"
    style="@style/RoundedButton"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="Finish"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="
        @+id/objRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>